<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018.  Group TBD, SPS2018, TUDelft
  ~ Author: Pradhayini Ramamurthy
  ~ Permission to use, copy, modify, and/or distribute this software for any purpose with or without
  ~ fee is hereby granted, provided that the above copyright notice and this permission notice appear
  ~ in all copies.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS
  ~ SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE
  ~ AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
  ~ WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT,
  ~ NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE
  ~ OF THIS SOFTWARE.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_floorLabel"
        android:layout_width="85dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_FloorNum"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Floor #:" />


    <com.tudelft.tbd.map.MapView
        android:id="@+id/image_floorMap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/floormap"
        app:layout_constraintBottom_toTopOf="@+id/button_nav_LocateMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_CellLabel"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textView_FloorNum"
        android:layout_width="27dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/textView_floorLabel"
        app:layout_constraintEnd_toStartOf="@+id/textView_CellLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/textView_floorLabel"
        app:layout_constraintTop_toTopOf="@+id/textView_floorLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_CellLabel"
        android:layout_width="66dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cellNum"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/textView_floorLabel"
        app:layout_constraintEnd_toStartOf="@+id/textView_CellNum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_FloorNum"
        app:layout_constraintTop_toTopOf="@+id/textView_floorLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_CellNum"
        android:layout_width="149dp"
        android:layout_height="34dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/textView_floorLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_CellLabel"
        app:layout_constraintTop_toTopOf="@+id/textView_floorLabel"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_nav_LocateMe"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/locate_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_CellLabel"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>
